--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Duolando: Follower GPT with Off-Policy Reinforcement Learning to Dance Accompaniment">
-  <meta name="keywords" content="Motion Generation, Music to Dance, GPT, VQVAE, Reinforcement Learning">
+        content="InterDance: Reactive 3D Dance Generation \\ for Realistic Two Dancer Interactions">
+  <meta name="keywords" content="Motion Generation, Music to Dance, Human-Human Interactions">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Duolando: Follower GPT with Off-Policy Reinforcement Learning to Dance Accompaniment</title>
+  <title>InterDance: Reactive 3D Dance Generation for Realistic Two Dancer Interaction</title>
 
 
   <script>
@@ -48,30 +48,30 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-2 publication-title">Duolando: Follower GPT with Off-Policy Reinforcement Learning to Dance Accompaniment</h1>
-          <h2 class="title is-4 publication-title">ICLR 2024</h2>
+          <!-- <h2 class="title is-4 publication-title">ICLR 2024</h2> -->
           <div class="is-size-4 publication-authors">
             <span class="author-block">
-              <a href="https://lisiyao21.github.io/">Li Siyao</a><sup>1</sup>,</span>
+              <a href="https://li-ronghui.github.io/">Ronghui Li</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://gutianpei.github.io/">Tianpei Gu</a><sup>2</sup>,</span>
+              <a href="https://interdance.github.io/">Youliang Zhang</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://github.com/Maoxie">Zhitao Yang</a><sup>3</sup>,
+              <a href="https://yachao-zhang.github.io/">Yachao Zhang</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=XbFxzicAAAAJ&hl">Zhengyu Lin</a><sup>3</sup>,
+              <a href="https://zhangyux15.github.io/">Yuxiang Zhang</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://liuziwei7.github.io/">Ziwei Liu</a><sup>1</sup>,
+              <a href="https://scholar.google.com/citations?hl=en&user=9QLVTUYAAAAJ">Jie Guo</a><sup>1</sup>,
             </span>
             <br/>
             <span class="author-block">
-              <a href="https://henghuiding.github.io/">Henghui Ding</a><sup>1</sup>,
+              <a href="https://liuziwei7.github.io/">Ziwei Liu</a><sup>1</sup>,
             </span>
             <span class="author-block">
-		      <a href="https://yanglei.me/">Lei Yang </a><sup>3,4✉</sup>
+		      <a href="https://www.liuyebin.com/">Yebin Liu </a><sup>1</sup>
             </span>
             <span class="author-block">
-              <a href="https://www.mmlab-ntu.com/person/ccloy/">Chen Change Loy </a><sup>1✉</sup>
+              <a href="https://thusigsiclab.github.io/thu.github.io/">Xiu Li </a><sup>1✉</sup>
             </span>
           </div>
 
@@ -81,9 +81,9 @@
             <span class="author-block"><sup>3</sup>SenseTime  </span>
             <span class="author-block"><sup>4</sup>Shanghai AI Laboratory</span>
           </div>
-          <ul class="list-unstyled name-list">
-              <li>✉corresponding author</li>
-          </ul>
+          <!-- <ul class="list-unstyled name-list"> -->
+              <!-- <li>✉corresponding author</li> -->
+          <!-- </ul> -->
 
           <div class="column has-text-centered">
             <div class="publication-links">
