--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-2 publication-title">Duolando: Follower GPT with Off-Policy Reinforcement Learning to Dance Accompaniment</h1>
+          <h1 class="title is-2 publication-title">InterDance: Reactive 3D Dance Generation \\
+            for Realistic Two Dancer Interactions</h1>
           <!-- <h2 class="title is-4 publication-title">ICLR 2024</h2> -->
           <div class="is-size-4 publication-authors">
             <span class="author-block">
