--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
           <iframe class='video' style="width:100%" src="https://www.youtube.com/embed/Y2zksX3cSCw?si=SijgU5rUtLArB_nm"
-              title="ICLR 2024: Duolando: Follower GPT with Off-Policy Reinforcement Learning for Dance Accompaniment"
+              title="InterDance: Reactive 3D Dance Generation for Realistic Two Dancer Interactions"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
           </iframe>
