--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="InterDance: Reactive 3D Dance Generation \\ for Realistic Two Dancer Interactions">
+        content="InterDance: Reactive 3D Dance Generation for Realistic Two Dancer Interactions">
   <meta name="keywords" content="Motion Generation, Music to Dance, Human-Human Interactions">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>InterDance: Reactive 3D Dance Generation for Realistic Two Dancer Interaction</title>
@@ -54,19 +54,19 @@
             <span class="author-block">
               <a href="https://li-ronghui.github.io/">Ronghui Li</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://interdance.github.io/">Youliang Zhang</a><sup>2</sup>,</span>
+              <a href="https://interdance.github.io/">Youliang Zhang</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://yachao-zhang.github.io/">Yachao Zhang</a><sup>3</sup>,
+              <a href="https://yachao-zhang.github.io/">Yachao Zhang</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://zhangyux15.github.io/">Yuxiang Zhang</a><sup>3</sup>,
+              <a href="https://zhangyux15.github.io/">Yuxiang Zhang</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?hl=en&user=9QLVTUYAAAAJ">Jie Guo</a><sup>1</sup>,
+              <a href="https://scholar.google.com/citations?hl=en&user=9QLVTUYAAAAJ">Jie Guo</a><sup>2</sup>,
             </span>
             <br/>
             <span class="author-block">
-              <a href="https://liuziwei7.github.io/">Ziwei Liu</a><sup>1</sup>,
+              <a href="https://liuziwei7.github.io/">Ziwei Liu</a><sup>3</sup>,
             </span>
             <span class="author-block">
 		      <a href="https://www.liuyebin.com/">Yebin Liu </a><sup>1</sup>
@@ -77,10 +77,9 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>S-Lab, Nanyang Technological University  </span>
-            <span class="author-block"><sup>2</sup>Lexica  </span>
-            <span class="author-block"><sup>3</sup>SenseTime  </span>
-            <span class="author-block"><sup>4</sup>Shanghai AI Laboratory</span>
+            <span class="author-block"><sup>1</sup>Tsinghua University  </span>
+            <span class="author-block"><sup>2</sup>Peng Cheng Laboratory  </span>
+            <span class="author-block"><sup>3</sup>S-Lab, Nanyang Technological University  </span>
           </div>
           <!-- <ul class="list-unstyled name-list"> -->
               <!-- <li>✉corresponding author</li> -->
