--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 		      <a href="https://www.liuyebin.com/">Yebin Liu </a><sup>1</sup>
             </span>
             <span class="author-block">
-              <a href="https://thusigsiclab.github.io/thu.github.io/">Xiu Li </a><sup>1✉</sup>
+              <a href="https://thusigsiclab.github.io/thu.github.io/">Xiu Li </a>
+              <!-- <sup>1✉</sup> -->
             </span>
           </div>
 
