--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
         <div class="content">
           <p>
             The website template was borrowed from <a
+            href="https://lisiyao21.github.io/projects/Duolando/">Nerfies</a>, <a
               href="https://github.com/nerfies/nerfies.github.io">Nerfies</a> 
           </p>
         </div>
