--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <!-- <h2 class="title is-4 publication-title">ICLR 2024</h2> -->
           <div class="is-size-4 publication-authors">
             <span class="author-block">
-              <a href="https://li-ronghui.github.io/">Ronghui Li</a><sup>1</sup>,</span>
+              <a href="https://li-ronghui.github.io/">Ronghui Li</a><sup>*<sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://interdance.github.io/">Youliang Zhang</a><sup>1</sup>,</span>
+              <a href="https://interdance.github.io/">Youliang Zhang</a><sup>*<sup>1</sup>,</span>
             <span class="author-block">
               <a href="https://yachao-zhang.github.io/">Yachao Zhang</a><sup>1</sup>,
             </span>
