--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-2 publication-title">InterDance: Reactive 3D Dance Generation \\
+          <h1 class="title is-2 publication-title">InterDance: Reactive 3D Dance Generation 
             for Realistic Two Dancer Interactions</h1>
           <!-- <h2 class="title is-4 publication-title">ICLR 2024</h2> -->
           <div class="is-size-4 publication-authors">
@@ -372,7 +372,7 @@
         <div class="content">
           <p>
             The website template was borrowed from <a
-            href="https://lisiyao21.github.io/projects/Duolando/">Nerfies</a>, <a
+            href="https://lisiyao21.github.io/projects/Duolando/">Duolando</a>, <a
               href="https://github.com/nerfies/nerfies.github.io">Nerfies</a> 
           </p>
         </div>
