--- a/index.html
+++ b/index.html
@@ -358,7 +358,8 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">License</h2>
         <div>
-		Dataset and Code are released under  <a href="https://github.com/lisiyao21/Bailando/blob/main/LICENSE" target="_blank">NTU S-Lab 1.0 License</a>.
+          This dataset is provided solely for the purpose of review. Please do not redistribute this dataset. The dataset will be officially released with the camera-ready version of the paper.
+          <!-- <a href="https://github.com/lisiyao21/Bailando/blob/main/LICENSE" target="_blank">NTU S-Lab 1.0 License</a>. -->
 	    </div>
       </div>
     </div>
