--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 		    <tr style="display:table-row">
 		        <td>
 		            <div>
-						<iframe src="https://youtu.be/O8GL_P_1SKs" title="quick show Foxtrot" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/O8GL_P_1SKs" title="quick show Foxtrot" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Foxtrot</span>
