--- a/index.html
+++ b/index.html
@@ -234,93 +234,111 @@
 		    <tr style="display:table-row">
 		        <td>
 		            <div>
-						<iframe src="https://www.youtube.com/embed/O8GL_P_1SKs" title="quick show Foxtrot" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-		            </div>
-		            <div style="text-align: center; font-size: large;">
-		                <span style="font-style:italic">Foxtrot</span>
-		            </div>
-        		</td>
-		        <td>
-		            <div>
-						<iframe src="https://www.youtube.com/embed/XnRPSB9k7AM?list=PLO2y5ex4snyG7FfkkuNpKXfZmqKX_1VrY" title="quick show Quickstep" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-		            </div>
-		            <div style="text-align: center; font-size: large;">
-		                <span style="font-style:italic">Quickstep</span>
-		            </div>
-        		</td>
-			</tr>
-		    <tr style="display:table-row">
-		        <td>
-		            <div>
-						<iframe src="https://www.youtube.com/embed/OgAPQ81hDjw?list=PLO2y5ex4snyG7FfkkuNpKXfZmqKX_1VrY" title="quick show Tango" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-		            </div>
-		            <div style="text-align: center; font-size: large;">
-		                <span style="font-style:italic">Tango</span>
-		            </div>
-        		</td>
-		        <td>
-		            <div>
-						<iframe src="https://www.youtube.com/embed/wkZlvyPlo6Q?list=PLO2y5ex4snyG7FfkkuNpKXfZmqKX_1VrY" title="quick show Waltz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://youtu.be/embed/7jOGt92EvZU/" title="quick show Waltz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Waltz</span>
 		            </div>
         		</td>
-			</tr>
-		    <tr style="display:table-row">
 		        <td>
 		            <div>
-						<iframe src="https://www.youtube.com/embed/3LJnWhrQK0c?list=PLO2y5ex4snyG7FfkkuNpKXfZmqKX_1VrY" title="quick show Qiaqiaqia" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://youtu.be/embed/8TNQC9sxEeQ" title="quick show Chacha" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Cha Cha</span>
 		            </div>
         		</td>
+			</tr>
+		    <tr style="display:table-row">
 		        <td>
 		            <div>
-						<iframe src="https://www.youtube.com/embed/fsHVpTbO2D0?list=PLO2y5ex4snyG7FfkkuNpKXfZmqKX_1VrY" title="quick show PasoDable" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://youtu.be/embed/O8GL_P_1SKs" title="quick show Jazz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
-		                <span style="font-style:italic">PasoDable</span>
+		                <span style="font-style:italic">Jazz</span>
+		            </div>
+        		</td>
+		        <td>
+		            <div>
+						<iframe src="https://youtu.be/embed/4vYpuA74BHw" title="quick show Rumba" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		            </div>
+		            <div style="text-align: center; font-size: large;">
+		                <span style="font-style:italic">Rumba</span>
 		            </div>
         		</td>
 			</tr>
 		    <tr style="display:table-row">
 		        <td>
 		            <div>
-						<iframe src="https://www.youtube.com/embed/gw042aThsE4?list=PLO2y5ex4snyG7FfkkuNpKXfZmqKX_1VrY" title="quick show Lumba" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://youtu.be/embed/Di284unwZuY" title="quick show Shenyun" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
-		                <span style="font-style:italic">Lumba</span>
+		                <span style="font-style:italic">Shenyun</span>
 		            </div>
         		</td>
 		        <td>
 		            <div>
-						<iframe src="https://www.youtube.com/embed/uUioReX0QUY?list=PLO2y5ex4snyG7FfkkuNpKXfZmqKX_1VrY" title="quick show Samba" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-		            </div>
-		            <div style="text-align: center; font-size: large;">
-		                <span style="font-style:italic">Samba</span>
-		            </div>
-        		</td>
-			</tr>
-		    <tr style="display:table-row">
-		        <td>
-		            <div>
-						<iframe src="https://www.youtube.com/embed/XULbn9ksKDA?list=PLO2y5ex4snyG7FfkkuNpKXfZmqKX_1VrY" title="quick show Jive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/5cVuJ3ryzPM" title="quick show Jive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Jive</span>
 		            </div>
         		</td>
+			</tr>
+		    <tr style="display:table-row">
 		        <td>
 		            <div>
-						<iframe src="https://www.youtube.com/embed/iXnkk6_bA14?list=PLO2y5ex4snyG7FfkkuNpKXfZmqKX_1VrY" title="quick show SwanLake" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/i8ccKw-Kvzg" title="quick show Tai" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
-		                <span style="font-style:italic">Ballet</span>
+		                <span style="font-style:italic">Tai</span>
+		            </div>
+        		</td>
+		        <td>
+		            <div>
+						<iframe src="https://www.youtube.com/embed/D8HCZMZpTBc" title="quick show Uighur" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		            </div>
+		            <div style="text-align: center; font-size: large;">
+		                <span style="font-style:italic">Uighur</span>
 		            </div>
         		</td>
 			</tr>
+		    <tr style="display:table-row">
+		        <td>
+		            <div>
+						<iframe src="https://www.youtube.com/embed/jAf1icyxF9M" title="quick show Hantang" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		            </div>
+		            <div style="text-align: center; font-size: large;">
+		                <span style="font-style:italic">Hantang</span>
+		            </div>
+        		</td>
+		        <td>
+		            <div>
+						<iframe src="https://www.youtube.com/embed/Fj0dQAO43Rg" title="quick show Hiphop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		            </div>
+		            <div style="text-align: center; font-size: large;">
+		                <span style="font-style:italic">Hiphop</span>
+		            </div>
+        		</td>
+			</tr>
+      <tr style="display:table-row">
+        <td>
+            <div>
+        <iframe src="https://www.youtube.com/embed/1bw2m89S5hE" title="quick show Dunhuang" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div style="text-align: center; font-size: large;">
+                <span style="font-style:italic">Dunhuang</span>
+            </div>
+        </td>
+        <td>
+            <div>
+        <iframe src="https://www.youtube.com/embed/VgaHs3fppgE" title="quick show Kpop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div style="text-align: center; font-size: large;">
+                <span style="font-style:italic">Kpop</span>
+            </div>
+        </td>
+  </tr>
 		</table>
         </div>
       </div>
