--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 		    <tr style="display:table-row">
 		        <td>
 		            <div>
-						<iframe src="https://youtu.be/embed/7jOGt92EvZU/" title="quick show Waltz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/7jOGt92EvZU/" title="quick show Waltz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Waltz</span>
@@ -242,7 +242,7 @@
         		</td>
 		        <td>
 		            <div>
-						<iframe src="https://youtu.be/embed/8TNQC9sxEeQ" title="quick show Chacha" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/8TNQC9sxEeQ" title="quick show Chacha" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Cha Cha</span>
@@ -252,7 +252,7 @@
 		    <tr style="display:table-row">
 		        <td>
 		            <div>
-						<iframe src="https://youtu.be/embed/O8GL_P_1SKs" title="quick show Jazz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/O8GL_P_1SKs" title="quick show Jazz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Jazz</span>
@@ -260,7 +260,7 @@
         		</td>
 		        <td>
 		            <div>
-						<iframe src="https://youtu.be/embed/4vYpuA74BHw" title="quick show Rumba" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/4vYpuA74BHw" title="quick show Rumba" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Rumba</span>
@@ -270,7 +270,7 @@
 		    <tr style="display:table-row">
 		        <td>
 		            <div>
-						<iframe src="https://youtu.be/embed/Di284unwZuY" title="quick show Shenyun" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/Di284unwZuY" title="quick show Shenyun" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Shenyun</span>
