--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 		    <tr style="display:table-row">
 		        <td>
 		            <div>
-						<iframe src="https://www.youtube.com/embed/cF6KosE" title="quick show Sumba" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/xud-cF6KosE" title="quick show Sumba" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		            </div>
 		            <div style="text-align: center; font-size: large;">
 		                <span style="font-style:italic">Sumba (React)</span>
@@ -397,18 +397,18 @@
       <tr style="display:table-row">
         <td>
             <div>
-        <iframe src="https://www.youtube.com/embed/1bw2m89S5hE" title="quick show Dunhuang" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/AvU_4TDpQD0" title="quick show Waltz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div style="text-align: center; font-size: large;">
-                <span style="font-style:italic">Dunhuang (duet)</span>
+                <span style="font-style:italic">Waltz (duet)</span>
             </div>
         </td>
         <td>
             <div>
-        <iframe src="https://www.youtube.com/embed/VgaHs3fppgE" title="quick show Kpop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/vXh-71VH2s8" title="quick show Kpop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div style="text-align: center; font-size: large;">
-                <span style="font-style:italic">Kpop (duet)</span>
+                <span style="font-style:italic">Waltz (duet)</span>
             </div>
         </td>
   </tr>
