--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 </section>
 
 
-<section class='section'>
+<!-- <section class='section'>
   <div class="container is-max-desktop content">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -222,7 +222,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <section class='section'>
