--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       <tr style="display:table-row">
         <td>
             <div>
-        <iframe src="https://www.youtube.com/embed/AvU_4TDpQD0" title="quick show Waltz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/YGE2IqGVaR4" title="quick show Waltz" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div style="text-align: center; font-size: large;">
                 <span style="font-style:italic">Waltz (duet)</span>
@@ -408,10 +408,10 @@
         </td>
         <td>
             <div>
-        <iframe src="https://www.youtube.com/embed/vXh-71VH2s8" title="quick show Kpop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/1zB6eHoP-LA" title="quick show Rumba" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div style="text-align: center; font-size: large;">
-                <span style="font-style:italic">Waltz (duet)</span>
+                <span style="font-style:italic">Rumba (duet)</span>
             </div>
         </td>
   </tr>
