modify index 0604_lrh

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-2 publication-title">InterDance: Reactive 3D Dance Generation 
-            for Realistic Two Dancer Interactions</h1>
+            for Realistic Two Dancer Interactions\\
+            This page is under construction🔨 </h1>
           <!-- <h2 class="title is-4 publication-title">ICLR 2024</h2> -->
           <div class="is-size-4 publication-authors">
             <span class="author-block">
@@ -133,6 +134,9 @@
                   </span>
                   <span>Data</span>
                 </a>
+                <p>
+                  Please do not distribute the Data. Full Dataset and Code will be publicly available when this paper is accepted.
+                </p>
 
            
             </div>
@@ -182,8 +186,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Humans can perform a variety of interactive motion, among which two-person dance is one of the most challenging interactions.   However, in terms of computer motion generation, current work is still unable to generate high-quality interactive actions, especially in the field of double dance.
-  On the one hand, this is caused by the lack of large-scale high-quality data sets, and on the other hand, it is caused by interactive motion generation algorithms.   In order to solve the above challenges, we proposed a large-scale two-person dance data set containing rich styles and whole-body movements, totaling 7.85 hours; we also proposed a new motion representation and an interactive dance generation network based on diffusion model. Experiments demonstrate the effectiveness of our dataset and algorithm.
+            Humans can perform a variety of interactive motions, among which two-person dance is one of the most challenging interactions. However, in terms of computer motion generation, current work is still unable to generate high-quality interactive motion, especially in the field of duet dance. On the one hand, this is caused by the lack of large-scale high-quality datasets. On the other hand, it arises from the incomplete representation of interactive motion and the lack of fine-grained optimization of interactions. To address these challenges, we propose a duet dance dataset that significantly enhances motion quality, data scale, and the variety of dance genres. Based on this dataset, we propose a new motion representation that can accurately and comprehensively describe interactive motion. We further introduce a diffusion-based algorithm with an interaction refine guidance strategy to optimize the realism of interactions progressively. Experiments demonstrate the effectiveness of our dataset and algorithm. Our project page is https://interdance.github.io/.
           </p>
         </div>
       </div>
