--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-2 publication-title">InterDance: Reactive 3D Dance Generation 
-            for Realistic Two Dancer Interactions\\
-            This page is under construction🔨 </h1>
-          <!-- <h2 class="title is-4 publication-title">ICLR 2024</h2> -->
+            for Realistic Two Dancer Interactions </h1>
+          <h2 class="title is-4 publication-title">This page is under construction🔨</h2>
           <div class="is-size-4 publication-authors">
             <span class="author-block">
               <a href="https://li-ronghui.github.io/">Ronghui Li</a><sup>*<sup>1,2</sup>,</span>
