--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="InterDance: Reactive 3D Dance Generation for Realistic Two Dancer Interactions">
+        content="InterDance: Reactive 3D Dance Generation with Realistic Duet Interactions">
   <meta name="keywords" content="Motion Generation, Music to Dance, Human-Human Interactions">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>InterDance: Reactive 3D Dance Generation for Realistic Two Dancer Interaction</title>
+  <title>InterDance: Reactive 3D Dance Generation with Realistic Duet Interactions</title>
 
 
   <script>
@@ -48,7 +48,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-2 publication-title">InterDance: Reactive 3D Dance Generation 
-            for Realistic Two Dancer Interactions </h1>
+            with Realistic Duet Interactions </h1>
           <h2 class="title is-4 publication-title">This page is under construction🔨</h2>
           <div class="is-size-4 publication-authors">
             <span class="author-block">
