--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Data Examples (Quick Scan)</h2>
         <div>
-        This section showcases clips from 10 dance genres in the DD100 dataset.
-		<div><a href="./gallery.html" style="color:cornflowerblue;padding:0;border:none;background:none">▶ More Examples on DD100 Gallery</a></div>
+        This section showcases in the InteracDance dataset.
+		<!-- <div><a href="./gallery.html" style="color:cornflowerblue;padding:0;border:none;background:none">▶ More Examples on DD100 Gallery</a></div> -->
 		<table>
 		    <tr style="display:table-row">
 		        <td>
