--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
         content="Duolando: Follower GPT with Off-Policy Reinforcement Learning to Accompany a Dance">
   <meta name="keywords" content="Motion Generation, Music to Dance, GPT, VQVAE, Reinforcement Learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Duolando: Follower GPT with Off-Policy Reinforcement Learning to Accompany a Dance</title>
+  <title>InterDance: Reactive 3D Dance Generation with Realistic Duet Interactions</title>
 
   <link rel="stylesheet" href="./static/css/gallery.css" />
   <link rel="stylesheet" href="./static/css/boxicons.min.css" />
@@ -16,22 +16,29 @@
 <body>
 
   <div class="container">
-    <h1 class="title is-2 publication-title">Duolando: Follower GPT with Off-Policy Reinforcement Learning to Accompany a Dance (DD100 Gallery)</h1>
+    <h1 class="title is-2 publication-title">InterDance: Reactive 3D Dance Generation with Realistic Duet Interactions (InterDance Gallery)</h1>
     <br/>
     <div class="search-box">
       <i class="bx bx-search"></i>
       <input type="text" placeholder="Search a dance genre" list="genres" />
       <datalist id="genres">
-        <option>Foxtrot</option>
-        <option>Quickstep</option>
-        <option>Tango</option>
+        <option>Jazz</option>
+        <option>Chinese</option>
+        <option>Urban</option>
+        <option>ShenYun</option>
+        <option>HanTang</option>
+        <option>Miao</option>
+        <option>Uighur</option>
+        <option>Tai</option>
         <option>Waltz</option>
-        <option>ChaCha</option>
-        <option>PasoDable</option>
-        <option>Lumba</option>
-        <option>Samba</option>
+        <option>Tango</option>
+        <option>Chacha</option>
         <option>Jive</option>
-        <option>Ballet</option>
+        <option>Rumba</option>
+        <option>Samba</option>
+        <option>Kpop</option>
+        <option>HipHop</option>
+        <option>DunHuang</option>
       </datalist>
     </div>
 
@@ -77,7 +84,7 @@
         <h6>ShenYun 010 001 blend</h6>
       </div>
       <div class="dance-box" data-name="ShenYun">
-        <iframe src="https://www.youtube.com/embed/Swn82V6XAcA-U" title="ShenYun 009 001 blend" 
+        <iframe src="https://www.youtube.com/embed/Swn82V6XAcA" title="ShenYun 009 001 blend" 
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h6>ShenYun 003 001 blend</h6>
       </div>
@@ -87,7 +94,7 @@
         <h6>ShenYun 010 001 blend</h6>
       </div>
       <div class="dance-box" data-name="ShenYun">
-        <iframe src="https://www.youtube.com/embed/lApD5pNiOo4-U" title="ShenYun 011 013 blend" 
+        <iframe src="https://www.youtube.com/embed/lApD5pNiOo4" title="ShenYun 011 013 blend" 
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h6>ShenYun 002 013 blend</h6>
       </div>
