--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <h2 class="title is-3">Data Examples (Quick Scan)</h2>
         <div>
         This section showcases in the InteracDance dataset.
-		<div><a href="./gallery.html" style="color:cornflowerblue;padding:0;border:none;background:none">▶ More Examples on DD100 Gallery</a></div>
+		<div><a href="./gallery.html" style="color:cornflowerblue;padding:0;border:none;background:none">▶ More Examples on InterDance Gallery</a></div>
 		<table>
 		    <tr style="display:table-row">
 		        <td>
