--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,6 @@
       <input type="text" placeholder="Search a dance genre" list="genres" />
       <datalist id="genres">
         <option>Jazz</option>
-        <option>Chinese</option>
         <option>Urban</option>
         <option>ShenYun</option>
         <option>HanTang</option>
@@ -31,7 +30,6 @@
         <option>Uighur</option>
         <option>Tai</option>
         <option>Waltz</option>
-        <option>Tango</option>
         <option>Chacha</option>
         <option>Jive</option>
         <option>Rumba</option>
@@ -48,11 +46,11 @@
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h6>Jazz 005 003 blend</h6>
       </div>
-      <div class="dance-box" data-name="Jazz">
+      <!-- <div class="dance-box" data-name="Jazz">
         <iframe src="https://www.youtube.com/embed/EHkAs3BwKxQ" title="Chinese 002 1568 blend" 
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h6>Chinese 002 018 blend</h6>
-      </div>
+      </div> -->
       <div class="dance-box" data-name="Urban">
         <iframe src="https://www.youtube.com/embed/hGmHpzZJtII" title="Urban 003 001 blend" 
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -168,10 +166,10 @@
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h6>Waltz 009 004 blend</h6>
       </div>
-      <div class="dance-box" data-name="Tango">
-        <iframe src="https://www.youtube.com/embed/NYHFaTWtTyk" title="Tango 026 001 blend" 
+      <div class="dance-box" data-name="Waltz">
+        <iframe src="https://www.youtube.com/embed/NYHFaTWtTyk" title="Waltz 026 001 blend" 
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <h6>Tango 008 001 blend</h6>
+        <h6>Waltz 008 001 blend</h6>
       </div>
       <div class="dance-box" data-name="Chacha">
         <iframe src="https://www.youtube.com/embed/V6xOstYFx4U" title="Chacha 027 002 blend" 
