--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
       <div class="dance-box" data-name="Jazz">
         <iframe src="https://www.youtube.com/embed/ABlvPanuDNA" title="Jazz 001 003 blend" 
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <h6>Jazz 005 003 blend</h6>
+        <!-- <h6>Jazz 005 003 blend</h6> -->
       </div>
       <!-- <div class="dance-box" data-name="Jazz">
         <iframe src="https://www.youtube.com/embed/EHkAs3BwKxQ" title="Chinese 002 1568 blend" 
@@ -54,12 +54,12 @@
       <div class="dance-box" data-name="Urban">
         <iframe src="https://www.youtube.com/embed/hGmHpzZJtII" title="Urban 003 001 blend" 
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <h6>Urban 003 001 blend</h6>
+        <!-- <h6>Urban 003 001 blend</h6> -->
       </div>
       <div class="dance-box" data-name="Jazz">
         <iframe src="https://www.youtube.com/embed/RrId5j4wcPQ" title="Jazz 004 001 blend" 
        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <h6>Jazz 004 001 blend</h6>
+        <!-- <h6>Jazz 004 001 blend</h6> -->
       </div>
       <div class="dance-box" data-name="Choreography">
         <iframe src="https://www.youtube.com/embed/EHkH5TQuJ7k" title="Choreography 005 002 blend" 
